# sentinel_cpp

./: .gitignore  CMakeLists.txt  old_main.cpp
src/: main.cpp
src/compat/: jthread_compat.hpp
src/compile_utils/: kill_vector_macros.hpp  vector_kill_macros.hpp  zed_safe_include.hpp
src/stereo_camera/: stereo_camera.hpp  stereo_camera_kernels.cu  stereo_camera_kernels.cuh
src/utils/: input_sources.hpp
src/visualizer/: batch_publisher.hpp  batch_viewer.hpp  ipc_common.hpp
src/yolo_manager/: yolo_manager.hpp
